On branch main  Your branch is up to date with 'origin/main'.
 Changes to be committed:
	modified:   .gitignore
	modified:   _config.yml
	new file:   _includes/footer.html
	modified:   _layouts/default.html
	new file:   _layouts/post.html
	new file:   _posts/2025-01-10-cuidados-acceso-vascular.md
	new file:   _posts/2025-01-28-manejo-sed-tratamiento.md
	modified:   _posts/2025-02-15-alimentacion-hemodialisis.md
	modified:   assets/css/styles.css
	new file:   assets/js/faq.js
	modified:   assets/js/script.js
	modified:   colegas.html
	new file:   gemfile.rb
	modified:   index.html
	modified:   pacientes.html
	modified:   personal.html

--- a/_config.yml
+++ b/_config.yml
@@ -26,3 +26,14 @@ navigation:
 exclude:
   - CNAME
   - README.md
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
+
+# Configuración adicional
+timezone: America/Santiago
+lang: es-ES
