--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,27 @@
+# Jekyll generated files
 _site/
 .sass-cache/
 .jekyll-cache/
 .jekyll-metadata
+vendor/
+
+# Ruby environment
+.bundle/
+vendor/bundle/
+.ruby-version
+.ruby-gemset
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE and editor folders
+.idea/
+.vscode/
+*.swp
+*.swo
